--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@
 .app {
   background-color: var(--primary-color);
   font-family: var(--font-base);
+  scroll-behavior: smooth;
 }
 
 .app__whitebg {
